# meanfieldpb

./: .gitlab-ci.yml  INSTALL.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
meanfieldpb/: __init__.py  colloid.py  linear_polyelec.py  surface_microgel.py  suspension.py  util.py  volume_microgel.py  weak_particle.py
meanfieldpb/LinearPB/: linear_volume_microgel_weak.py
meanfieldpb/PBequations/: PBequation_colloid_strong.py  PBequation_linearPolyelectrolyte_strong.py  PBequation_surfaceMicrogel_strong.py  PBequation_volumeMicrogel_strong.py  PBequation_volumeMicrogel_weak.py  __init__.py
meanfieldpb/Swelling/: osmotic_pressure.py  polymer_network.py  pressures.py  swelling_microgel.py
samples/: linear_polymer_sample.py  surface_microgel_sample.py  volume_microgel_sample.py
src/: __init__.py  colloid.py  linear_polyelec.py  surface_microgel.py  suspension.py  util.py  volume_microgel.py
src/LinearPB/: linear_volume_microgel_weak.py
src/PBequations/: PBequation_colloid_strong.py  PBequation_linearPolyelectrolyte_strong.py  PBequation_surfaceMicrogel_strong.py
src/Swelling/: osmotic_pressure.py  polymer_network.py  pressures.py  swelling_microgel.py
tests/: colloid_test.py  linear_polyelec_test.py  linear_volume_microgel_test.py  run_tests.sh  surface_microgel_test.py  volume_microgel_test.py
